# trabalho-PDI

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTEXT.md  Dockerfile  Makefile  README.md  UPDATES.md  debug.ipynb  docker-compose.gpu.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  reference_segment_label.py  requirements.md  requirements.txt  segmenta_rotulo(1).py  todo.md
.agents/: README.md  constraints.md  manifest.yaml
.agents/roles/: debugger.md  engineer.md  reviewer.md
.agents/workflows/: debug-segmentation.md  docker-and-make.md  issue-triage.md  pipeline-change.md  verify-before-done.md
.cursor/rules/: docker-make.mdc  language-policy.mdc  no-ml-no-ocr.mdc  no-spec-driven.mdc  pdiseg-pipeline.mdc  python-tests.mdc
.cursor/skills/grill-with-docs/: SKILL.md
.cursor/skills/pdiseg-calibrate-review/: SKILL.md
.cursor/skills/pdiseg-debug-notebook/: SKILL.md
.cursor/skills/pdiseg-docker/: SKILL.md
.cursor/skills/pdiseg-pipeline/: SKILL.md
.cursor/skills/run-verification/: SKILL.md
.cursor/skills/triage-issue/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml
.ipynb_checkpoints/: debug-checkpoint.ipynb
docs/: PIPELINE.md  PIPELINE_IMPROVEMENTS.md  README.md  docker-compose.md  pipeline-presentation-guide.md  review-viewer-contract.md
docs/adr/: 0001-two-stage-label-detection.md  0002-scikit-image-stack.md  0003-self-contained-detector-crop-from-original.md  0004-calibration-locked-recall-favoring-thresholds.md  0005-final-output-label-cluster.md  0005-stages-as-named-pdi-primitives.md  0006-local-feature-recognition.md  0006-stage1-dark-badge-detection.md  0007-stage1-local-dark-relief.md
docs/agents/: domain.md  harness.md
docs/src/: ARCHITECTURE.md
docs/tasks/: detect-full-label-clusters.md  integrate-reference-segmentation.md
pdiseg/: __init__.py  __main__.py  calibrate.py  calibrate_cli.py  imaging.py  pipeline.py  review_cli.py
pdiseg/review/: __init__.py  model.py  server.py
pdiseg/review/static/: index.html
scripts/: README.md  agent-harness-check.sh  build-t2-deliverable.py  build-t2-report.py  build-t2-simplified.py  build-templates.py  docker-entrypoint.sh  docker-export-artifacts.sh  docker-smoke.sh
src/pdiseg/: __init__.py  __main__.py
src/pdiseg/calibration/: __init__.py  service.py
src/pdiseg/cli/: __init__.py  calibrate.py  debug.py  recognize.py  review.py  segment.py
src/pdiseg/core/: __init__.py  acceleration.py  boxes.py  imaging.py
src/pdiseg/debug/: __init__.py  reload.py  sample.py  viz.py
src/pdiseg/detection/: __init__.py  candidates.py  config.py  detector.py  (+5 more)
tests/: test_acceleration.py  test_calibrate.py  test_cli.py  test_debug_reload.py  test_debug_sample.py  test_detector_validation.py  test_horizontal_roi.py  test_primitives.py  test_recognition.py  test_reference_integration.py  test_review_cli.py  test_review_model.py  test_review_server.py  test_run.py
(+14 files in other folders)
